Almost got the LazyParser/LazyLexer to compliant